# Porter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: clean-arch-engineer.md  clean-arch-reviewer.md
.claude/commands/: ship.md  streamlit.md  upt.md
.github/workflows/: deploy-frontend.yml  deploy.yml
App/: index.html  package-lock.json  package.json
App/src/: index.css  main.tsx  router.ts  types.ts
App/src/api/: client.ts
App/src/components/: AddProductForm.tsx  CheckingOverlay.tsx  ProductCard.tsx  Sidebar.tsx
App/src/hooks/: useLists.ts  useProducts.ts
App/src/pages/: ListPage.tsx  LoginPage.tsx
App/src/store/: auth.ts
docs/: application.md  architecture_rules.md  aws_infra.excalidraw  aws_infra.md  domain.md  infrastructure.md  ui.md
openspec/changes/migrate-sqlite-to-postgresql/: design.md  proposal.md
openspec/changes/password-gate/: design.md  tasks.md
openspec/specs/app-service/: spec.md
openspec/specs/currency-detection/: spec.md
openspec/specs/layered-architecture/: spec.md
openspec/specs/password-gate/: spec.md
openspec/specs/price-checking/: spec.md
openspec/specs/product-rename/: spec.md
openspec/specs/product-scraping/: spec.md
openspec/specs/product-storage/: spec.md
openspec/specs/react-frontend/: spec.md
openspec/specs/secrets-loading/: spec.md
openspec/specs/tracker-ui/: spec.md
openspec/specs/watchlist-management/: spec.md
source/porter/: app.py  checker.py  database.py  models.py  scraper.py  service.py
(+100 files in other folders)
