[project]
name = "porter"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "streamlit>=1.30.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
    "bcrypt (>=4.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
]


[tool.poetry]
packages = [{include = "porter", from = "source"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
